Fixed overflow scroll touch and added close button

--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -29,6 +29,17 @@
     transform: translate(-50%, -50%);
     max-height: 72vh;
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+
+  .close-drawer {
+    background-color: #448ccb;
+    color: white;
+    border: none;
+    position: fixed;
+    top: 1.7em;
+    right: 10px;
+    padding: 2em;
   }
 
   .drawer2 {
@@ -39,7 +50,6 @@
     background: white;
     padding: 3em;
     z-index: 300;
-    -webkit-overflow-scrolling: touch;
   }
 
   .spacer2 {
